# ITMO

./: .gitignore  README.md
Sem 1/Дискретная математика/: Множества, Лекция 1.pptx
Sem 1/История/: Список вопросов к экзамену.docx
Sem 1/Математика/: РГР МА1 5-1 6 Шикунов.docx  РГР_ЛА_2_3_задание.docx  РГР_МА_2_2_задание.docx
Sem 1/ОПД/: Команды для рубежки.rtf
Sem 1/Язык НАТО A2/: News about AI.rtf  Story about my dad.rtf  When i was a child.rtf
Sem 2/Дискретная математика/: 1 sem Дискретная математика  Курсач.docx  Методичка.docx
Sem 2/Математика/: РГР 3 Матанализ 1 задание 4 команда.docx
Sem 2/ОПД/: 1 sem ОПД
Sem 2/Программирование/: 1 sem Программирование
Sem 2/Язык НАТО A2/: .gitignore  Presentation.pptx  Ссылки на учебники.txt
Sem 3/Теорвер/: P3116 Билошицкий_Михаил_Владимирович Теория Вероятностей Практическая 5.docx  ИДЗ 19.1.docx  ИДЗ 19.2.docx
Sem 3/Физика/: ЛР1 Отчёт Билошицкий.М.В.docx  ЛР2 Отчёт Билошицкий.М.В.docx  ЛР3 Отчёт Билошицкий.М.В.docx  ЛР4 Отчёт Билошицкий.М.В.docx  ЛР5 Отчёт Билошицкий.М.В.docx
Sem 3/Физра/: БилошицкийМВ_P3216_Проект.pptx  Текст к презентации.docx
Sem 3/Язык НАТО B1/: .gitignore  Hello! My name is Misha.txt  Ссылки на учебники.txt
Sem 3/Языки программирования/programming-languages-itmo/laba3/solution/: CMakeLists.txt
Sem 3/Языки программирования/programming-languages-itmo/laba3/solution/include/: bmp.h  image.h  image_io.h  pixel.h  rotate.h
Sem 3/Языки программирования/programming-languages-itmo/laba3/solution/src/: image.c  image_io.c  main.c  rotate.c
Sem 4/АК/: План доклада.txt
(+656 files in other folders)
